fixed spacing, fixed space bar scroll

--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -10,4 +10,5 @@
     text-align: center;
     padding-bottom: 3rem;
     padding-right: 3rem;
+    margin-top: 14rem;
 }
